--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sharewhatyoucanproject">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,8 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShareWhatYouCanProject">
         <activity
+            android:name=".DonorActivity"
+             />
+        <activity
+            android:name=".HomescreenActivity"
+             />
+        <activity
             android:name=".DashboardActivity"
-            android:exported="false" />
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true"
