--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,15 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShareWhatYouCanProject">
-        <activity
-            android:name=".DonorActivity"
-             />
-        <activity
-            android:name=".HomescreenActivity"
-             />
-        <activity
-            android:name=".DashboardActivity"
-            />
+        <activity android:name=".DonorActivity" />
+        <activity android:name=".HomescreenActivity" />
+        <activity android:name=".DashboardActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
